--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -28,6 +28,7 @@
     "tested": "件",
     "reports": "件"
   },
+  "日付": "日付",
   "公表日": "公表日",
   "居住地": "居住地",
   "年代": "年代",
@@ -130,6 +131,7 @@
   "アクセスしようとしたページが見つかりませんでした。": "アクセスしようとしたページが見つかりませんでした。",
   "ページが移動または削除されたか、URLの入力間違いの可能性があります。": "ページが移動または削除されたか、URLの入力間違いの可能性があります。",
   "トップページへ戻る": "トップページへ戻る",
+  "{title}のグラフをシェア": "{title}のグラフをシェア",
   "第一庁舎計": "第一庁舎計",
   "第二庁舎計": "第二庁舎計",
   "議事堂計": "議事堂計",
@@ -185,6 +187,7 @@
   "検査実施人数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "検査実施人数は、速報値として公開するものであり、後日確定データとして修正される場合があります",
   "（注）同一の対象者について複数の検体を調査する場合あり": "（注）同一の対象者について複数の検体を調査する場合あり",
   "検査実施数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "検査実施数は、速報値として公開するものであり、後日確定データとして修正される場合があります",
+  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（注）速報値として公開するものであり、後日確定データとして修正される場合あり",
   "合計": "合計",
   "{date}の全体累計": "%{date}の全体累計",
   "{date}の合計": "%{date}の合計",
