--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -313,6 +313,18 @@
   "大分市": "大分市",
   "臼杵市": "臼杵市",
   "別府市": "別府市",
+  "竹田市": "竹田市",
+  "日田市": "日田市",
+  "中津市": "中津市",
+  "国東市": "国東市",
+  "津久見市": "津久見市",
+  "豊後大野市": "豊後大野市",
+  "宇佐市": "宇佐市",
+  "豊後高田市": "豊後高田市",
+  "佐伯市": "佐伯市",
+  "由布市": "由布市",
+  "杵築市": "杵築市",
+  "福岡県": "福岡県",
   "年代別陽性患者数": "年代別陽性患者数",
   "10代以下": "10代以下",
   "20代〜30代": "20代〜30代",
@@ -320,5 +332,7 @@
   "60代〜70代": "60代〜70代",
   "70代〜80代": "70代〜80代",
   "80代以上": "80代以上",
-  "言語選択": "言語選択"
+  "言語選択": "言語選択",
+  "お問い合わせ": "お問い合わせ",
+  "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "病院以外で対応する場合もあるため、これが最大許容数ではありません。"
 }
