--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -2,12 +2,14 @@
   "新型コロナウイルス感染症が心配なときに": "ถ้าคุณสงสัยว่าจะติดโควิด-19",
   "詳細を見る（東京都福祉保健局）": "ดูรายละเอียด (สำนักอนามัยและสวัสดิการแห่งกรุงโตเกียว)",
   "都内の最新感染動向": "ข่าวสารการติดเชื้อล่าสุดในโตเกียว",
+  "県内の最新感染動向": "ข่าวสารการติดเชื้อล่าสุดในจังหวัดโออิตะ",
+  "感染が疑われるときは": "หากคุณสงสัยว่าจะติดเชื้อ (ภาษาญี่ปุ่น)",
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "หากคุณกังวลเกี่ยวกับอาการของคุณหรือครอบครัวของคุณโปรดโทรหาเราก่อน",
   "相談の手順を見る": "ขั้นตอนเพื่อรับการช่วยเหลือ",
   "検査陽性者の状況": "รายละเอียดของกรณีที่ยืนยันแล้ว",
   "陽性患者数": "จำนวนกรณีที่ยืนยันแล้ว",
   "陽性患者の属性": "ลักษณะของผู้ป่วยที่ยืนยันแล้ว",
-  "検査実施件数": "จำนวนการทดสอบที่ได้ดำเนินการ",
+  "検査実施数": "จำนวนที่ได้ดำเนินการตรวจ",
   "新型コロナコールセンター相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาโควิด-19",
   "相談窓口相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาทางโทรศัพท์ (ทุกประเภท)",
   "都営地下鉄の利用者数の推移": "คาดการณ์จำนวนผู้โดยสารรถไฟใต้ดินโทเอ",
@@ -16,17 +18,18 @@
   "その他（チャーター便・クルーズ船）": "อื่นๆ (เที่ยวบินเช่าเหมาลำ / เรือสำราญ)",
   "{date}の累計": "รวมสะสมถึง {date}",
   "期間: {duration}": "ช่วง: {duration}",
-  "{duration}の利用者数との相対値: {percentage}": "เทียบกับจำนวนผู้ใช้ใน {duration}: {percentage}",
+  "{duration}の利用者数との相対値: {percentage}": "เทียบกับจำนวนผู้ใช้ในช่วง {duration}: {percentage} %",
   "1月20日~1月24日": "20-24 ม.ค.",
   "2月10日~14日": "10-14 ก.พ.",
   "2月17日~21日": "17-21 ก.พ.",
   "2月25日~28日": "25-28 ก.พ.",
-  "人": "คน",
+  "人": "ราย",
   "件": {
     "tested": "กรณี",
     "reports": "สาย"
   },
-  "公表日": "วันที่",
+  "日付": "วันที่",
+  "公表日": "วันที่รายงาน",
   "居住地": "ที่อยู่อาศัย",
   "年代": "อายุ (ช่วงสิบปี)",
   "性別": "เพศ",
@@ -35,7 +38,7 @@
   "湖南省長沙市": "ฉางชา มณฑลหูหนาน",
   "湖北省武漢市": "อู่ฮั่น มณฑลหูเป่ย์",
   "{age}代": "ช่วงอายุ {age}",
-  "10歳未満": "ต่ำกว่า 10",
+  "10歳未満": "ต่ำกว่า 10 ปี",
   "男性": "ชาย",
   "女性": "หญิง",
   "退院※": "ออกจากโรงพยาบาล※",
@@ -48,12 +51,9 @@
   "感染症を疑う場合の対応": "จะทำอย่างไรถ้าสงสัยว่าติดเชื้อ",
   "各保健所にご相談ください": "หากคุณมีอาการใดอาการหนึ่งดังต่อไปนี้ กรุณาติดต่อศูนย์สาธารณสุขที่อยู่ใกล้: มีอาการคล้ายหวัดหรือมีไข้, มีไข้สูงกว่า 37.5 °C มากกว่า 4 วันติดต่อกัน, อ่อนแรงอย่างมาก (วิงเวียนศีรษะ), หรือหอบ (หายใจลำบาก)",
   "「新型コロナウイルス感染症にかかる相談窓口について」": "บริการให้คำปรึกษาโควิด-19 ทางโทรศัพท์ (สำนักอนามัยและสวัสดิการ)",
-  "その他": {
-    "parent": "ข้อมูลอื่น",
-    "graph": "ที่อื่น"
-  },
-  "詳細は、各学校からのお知らせ等をご確認ください。": "สำหรับรายละเอียด กรุณาตรวจสอบจากประกาศของแต่ละโรงเรียน",
-  "企業の皆様・はたらく皆様へ": "สำหรับบริษัทและคนทำงาน",
+  "その他": "ข้อมูลอื่น",
+  "詳細は、各学校からのお知らせ等をご確認ください。": "สำหรับรายละเอียดเบื้องลึก กรุณาตรวจสอบจากประกาศของทางโรงเรียน",
+  "企業の皆様・はたらく皆様へ": "สำหรับบริษัทและคนทำงานในจังหวัดโออิตะ",
   "新型コロナウイルス感染症に対応した制度融資": "สินเชื่อระบบสำหรับเอสเอ็มที่กระทบจากโควิด-19",
   "感染症により事業活動に影響を受けている中小企業等を対象とした制度融資（「緊急融資」、「緊急借換」、「危機対応融資」）です。いずれも融資限度額は2億8千万円で、信用保証料を都が補助します。": "สินเชื่อระบบ (\"เงินกู้ฉุกเฉิน\", \"การรีไฟแนนซ์ฉุกเฉิน\", \"สินเชื่อตอบสนองต่อวิกฤต\") สำหรับบริษัทขนาดกลางและขนาดย่อมที่ธุรกิจได้รับผลกระทบจากโควิด-19 วงเงินสินเชื่ออยู่ที่ 280 ล้านเยน และค่าธรรมเนียมการค้ำประกันสินเชื่อจะได้รับการช่วยเหลือทั้งหมด",
   "新型コロナウイルスによる経営課題に関する専門家派遣": "การส่งผู้เชี่ยวชาญเพื่อให้ความช่วยเหลือประเด็นการจัดการที่เกิดจากโควิด-19",
@@ -75,11 +75,16 @@
   "フリーランスを含む個人事業主特別相談窓口": "ศูนย์ให้คำปรึกษาสำหรับบริษัทที่ทำเองคนเดียว รวมถึงฟรีแลนซ์",
   "資金繰りに関する相談、経営に関する相談（契約におけるトラブル等）": "คำปรึกษาเรื่องกระแสเงินสดและการบริหารจัดการ (ปัญหาในข้อสัญญา ฯลฯ)",
   "緊急労働相談ダイヤル": "สายด่วนให้คำปรึกษาด้านแรงงาน",
+  "新型コロナウイルスに関する休暇や休業の取り扱い、職場のハラスメントなどについての相談": "ปรึกษาปัญหาที่ได้รับผลกระทบจากโควิด-19 อาทิ จ้างเพื่อลาออก, ยุติกิจการ, การเลือกปฏิบัติในที่ทำงาน หรือ ปฏิเสธในการรับเข้าทำงาน",
   "新しいワークスタイルや企業活動の東京モデル「スムーズビズ」": "\"Smooth Biz\" กิจกรรมธุรกิจและวิถีการทำงานแนวใหม่ฉบับโตเกียว",
   "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、東京2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。": "ความริเริ่มในโครงการ Smooth Biz เช่น การทำงานจากระยะไกล และการยืดหยุ่นเวลาเข้างานนั้น ยังส่งผลดีต่อการลดการระบาดของไวรัสโคโรนาอีกด้วย มาตรการเดียวกันกับที่ใช้ต่อสู้การแพร่โรคติดต่อนี้ ควรถูกตระเตรียมล่วงหน้าไว้ด้วย เพื่อบรรเทาปัญหาการจราจรคับคั่งที่จะเกิดขึ้นในช่วงโอลิมปิกโตเกียว 2020",
   "当サイトについて": "เกี่ยวกับเว็บไซต์นี้",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、東京都が開設したものです。": "เว็บไซต์นี้พัฒนาโดยรัฐบาลกรุงโตเกียวเพื่อให้บริการข้อมูลข่าวสารล่าสุดเรื่องการติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่หรือโควิด-19 (COVID-19)",
-  "東京都による公式情報と客観的な数値をわかりやすく伝えることで、東京都にお住まいの方や、東京都内に拠点を持つ企業の方、東京都を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "เป้าหมายคือการให้บริการข้อมูลที่เข้าใจง่าย สาธารณะเข้าถึงได้ และไม่มีอคติ เกี่ยวกับการแพร่กระจายของเชื้อในกรุงโตเกียว เพื่อให้ผู้พำนัก บริษัท และนักท่องเที่ยว เข้าใจถึงสถานการณ์ปัจจุบัน และมีข้อมูลที่ถูกต้องเกี่ยวกับการป้องกันตัวและมาตรการที่จำเป็น",
+  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、有志が開設したものです。": "เว็บไซต์นี้พัฒนาโดยอาสาสมัครเพื่อให้บริการข้อมูลข่าวสารล่าสุดเรื่องการติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่หรือโควิด-19 (COVID-19) ในจังหวัดโออิตะ",
+  "当サイトは大分県内における新型コロナウイルス感染症（COVID-19）に関する最新情報を提供するために、{founder}が開設したものです。": "เว็บไซต์นี้เปิดให้บริการโดย {founder} เพื่อให้บริการข้อมูลข่าวสารล่าสุดเรื่องการติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่หรือโควิด-19 (COVID-19) ในจังหวัดโออิตะ",
+  "有志": "อาสาสมัคร",
+  "複製・改変が許されたオープンソースライセンスで公開されている、{tokyo}のしくみを利用しています。": "เว็บไซต์นี้ใช้สัญญาอนุญาตโอเพนซอร์ซในการคัดลอกและแจกจ่าย พัฒนาต่อยอดมาจาก {tokyo}.",
+  "東京都 新型コロナウイルス対策サイト": "เว็บไซต์โควิด-19 เฉพาะกิจของรัฐบาลกรุงโตเกียว",
+  "大分県による公式情報と客観的な数値をわかりやすく伝えることにより、大分県にお住まいの方や、大分県内に拠点を持つ企業の方、大分県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "เป้าหมายของอาสาสมัครในครั้งนี้คือการให้บริการข้อมูลที่เข้าใจง่าย สาธารณะเข้าถึงได้ และไม่มีอคติ เกี่ยวกับการแพร่กระจายของเชื้อในจังหวัดโออิตะ เพื่อให้ผู้พำนัก บริษัท และนักท่องเที่ยว เข้าใจถึงสถานการณ์ปัจจุบัน และมีข้อมูลที่ถูกต้องเกี่ยวกับการป้องกันตัวและมาตรการที่จำเป็น",
   "ブラウザ環境について": "ความเข้ากันได้กับเบราว์เซอร์",
   "当サイトは以下の環境でご覧いただくことを推奨いたします。": "แนะนำให้ใช้เว็บเบราว์เซอร์ดังต่อไปนี้ เพื่อดูเว็บไซต์นี้",
   "Microsoft Edge 最新版": "Microsoft Edge รุ่นล่าสุด",
@@ -108,12 +113,12 @@
   "Googleのプライバシーポリシー": "นโยบายความเป็นส่วนตัวของ Google",
   "Google Analyticsに関する詳細情報": "ข้อมูลเพิ่มเติมเกี่ยวกับ Google Analytics",
   "免責事項": "ข้อปฏิเสธความรับผิด",
-  "当サイトに掲載されている情報の正確性については万全を期していますが、東京都は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "แม้จะได้พยายามทุกวิถีทางแล้วเพื่อให้แน่ใจถึงความถูกต้องของข้อมูลที่เผยแพร่บนเว็บไซต์นี้ รัฐบาลกรุงโตเกียวไม่รับผิดชอบต่อการกระทำใดที่ผู้ใช้ได้ทำโดยใช้ข้อมูลจากไซต์นี้",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、大分県および当サイトの開発者は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "แม้จะได้พยายามทุกวิถีทางแล้วเพื่อให้แน่ใจถึงความถูกต้องของข้อมูลที่เผยแพร่บนเว็บไซต์นี้ หน่วยงานราชการจังหวัดโออิตะและผู้พัฒนาเว็บไซต์นี้จะไม่รับผิดชอบต่อการกระทำใดที่ผู้ใช้ได้ทำโดยใช้ข้อมูลจากไซต์นี้",
   "また、利用者が当サイトを利用したことにより発生した利用者の損害及び利用者が第三者に与えた損害に対して、責任を負うものではありません。": "เว็บไซต์จะไม่รับผิดชอบในกรณีที่ผู้ใช้นำข้อมูลจากเว็บไซต์ไปในทางที่สร้างหรืออาจสร้างความเสียหาย",
   "当サイトに掲載されている情報は、予告なしに変更又は削除することがあります。": "ข้อมูลข่าวสารใดๆ บนไซต์อาจเปลี่ยนแปลงหรือถูกลบโดยไม่ได้แจ้งให้ทราบล่วงหน้า",
   "データについて": "เกี่ยวกับข้อมูล",
-  "本サイトで公表しているデータは、{catalogWebsite}より誰でも自由にダウンロードが可能です。（データは順次追加予定です）": "ทุกคนสามารถดาวน์โหลดข้อมูลที่เผยแพร่บนเว็บไซต์นี้ได้จาก {catalogWebsite} (ข้อมูลจะถูกเพิ่มเตามลำดับ)",
-  "東京都オープンデータカタログサイト": "เว็บไซต์ Open Data Catalog ของรัฐบาลกรุงโตเกียว",
+  "本サイトで公表しているデータは、{catalogWebsite}より誰でもダウンロードできます。": "ทุกคนสามารถดาวน์โหลดข้อมูลที่เผยแพร่บนเว็บไซต์นี้ได้จาก {catalogWebsite} (ข้อมูลจะถูกเพิ่มเตามลำดับ)",
+  "大分県オープンデータカタログサイト": "เว็บไซต์ Open Data Catalog ของจังหวัดโออิตะ",
   "ソースコードについて": "เกี่ยวกับซอร์สโค้ด",
   "当サイトのソースコードはMITライセンスで公開されており、誰でも自由に利用することができます。": "ซอร์สโค้ดของไซต์นี้เผยแพร่ภายใข้สัญญาอนุญาตเอ็มไอที (MIT license) ที่ใครก็ตามสามารถใช้ได้อย่างอิสระ",
   "詳しくは、{githubRepo}をご確認ください。": "สำหรับรายละเอียด กรุณาดูที่ {githubRepo}",
@@ -126,16 +131,18 @@
   "アクセスしようとしたページが見つかりませんでした。": "ไม่พบหน้าที่คุณพยายามเข้าถึง",
   "ページが移動または削除されたか、URLの入力間違いの可能性があります。": "หน้าดังกล่าวอาจถูกย้ายหรือลบไปแล้ว หรือคุณอาจพิมพ์ URL ผิด",
   "トップページへ戻る": "กลับไปที่หน้าแรก",
+  "{title}のグラフをシェア": "แชร์กราฟ {title}",
   "第一庁舎計": "อาคารที่ 1",
   "第二庁舎計": "อาคารที่ 2",
   "議事堂計": "อาคารสภากรุงโตเกียว",
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "* ยอดรวมสะสมหนึ่งสัปดาห์ ในวันที่เปิดทำการ ยกเว้นวันเสาร์ วันอาทิตย์ และวันหยุดราชการ",
+  "検査実施<br />人数": "จำนวนผู้รับการตรวจ",
   "陽性者数": "จำนวนที่ยืนยัน",
-  "(累計)": "(รวม)",
+  "(累積)": "(รวม)",
   "入院中": "รักษาในโรงพยาบาล",
   "軽症・<br />中等症": "อาการเล็กน้อย<br />ถึงปานกลาง",
   "重症": "รุนแรง",
-  "死亡": "ตาย",
+  "死亡": "เสียชีวิต",
   "退院": "ออกจากโรงพยาบาล",
   "日別": "ต่อวัน",
   "累計": "รวม",
@@ -148,22 +155,28 @@
   "都営地下鉄4路線の自動改札出場数": "จำนวนรวมผู้โดยสารรถไฟใต้ดินโทเอ 4 สาย",
   "東京都": "โตเกียว",
   "新型コロナウイルス感染症": "การติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่",
-  "menu/新型コロナウイルス感染症": "การติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่",
-  "対策サイト": "เว็บไซต์คณะทำงานเฉพาะกิจ",
-  "menu/対策サイト": "เว็บไซต์คณะทำงานเฉพาะกิจ",
+  "対策サイト": "เว็บไซต์เฉพาะกิจ (ไม่เป็นทางการ)",
   "最終更新": "ปรับปรุงล่าสุด",
   "注釈": "นี่เป็นการแปลเพื่อใช้ชั่วคราว โปรดระวังว่าอาจมีการแปลที่ผิดพลาด",
   "print": "พิมพ์หน้านี้",
-  "サイドメニュー項目を開く": "เปิดเมนูข้าง",
-  "サイドメニュー項目を閉じる": "ปิดเมนูข้าง",
+  "サイドメニュー項目を開く": "เปิดเมนูด้านข้าง",
+  "サイドメニュー項目を閉じる": "ปิดเมนูด้านข้าง",
   "お子様をお持ちの皆様へ": "สำหรับครอบครัวที่มีเด็ก",
+  "中小企業の皆様へ": "สำหรับบริษัทในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
   "都民の皆様へ": "สำหรับผู้พำนักในโตเกียว (ภาษาญี่ปุ่น)",
+  "県民の皆様へ": "สำหรับผู้พำนักในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
+  "大分県 新型コロナウイルスに関するお知らせ": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
+  "大分市 新型コロナウイルスに関連する情報": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในอำเภอเมืองโออิตะ (ภาษาญี่ปุ่น)",
+  "大分合同新聞": "สำนักข่าว Godo โออิตะ",
+  "NHK NEWS 大分": "NHK NEWS โออิตะ",
+  "全国の最新感染動向": "ความเคลื่อนไหวล่าสุดของสถานการณ์โควิด-19 ในประเทศญี่ปุ่น",
   "東京都新型コロナウイルス感染症対策本部報": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในโตเกียว (ภาษาญี่ปุ่น)",
   "東京都主催等 中止又は延期するイベント等": "การยกเลิกหรือเลื่อนกิจกรรมโดยรัฐบาลกรุงโตเกียวที่ (ภาษาญี่ปุ่น)",
   "東京都公式ホームページ": "เว็บไซต์ทางการของรัฐบาลกรุงโตเกียว",
+  "大分県公式ホームページ": "เว็บไซต์ทางการของหน่วยงานราชการจังหวัดโออิตะ",
   "知事からのメッセージ": "สารจากผู้ว่าการกรุงโตเกียว",
-  "言語選択": "เมนูเลือกภาษา",
   "このサイトの内容物は": "เนื้อหาในเว็บไซต์นี้เผยแพร่ภายใต้",
+  "https://creativecommons.org/licenses/by/4.0/deed.ja": "https://creativecommons.org/licenses/by/4.0/deed.th",
   "クリエイティブ・コモンズ 表示 4.0 ライセンス": "สัญญาอนุญาตครีเอทีฟคอมมอนส์แบบแสดงที่มา 4.0 ระหว่างประเทศ",
   "の下に提供されています。": "ตามที่ได้ระบุไว้ด้านล่าง",
   "実績値": "จำนวนตอนนี้",
@@ -173,12 +186,19 @@
   "（チャーター機帰国者、クルーズ船乗客等は含まれていない）": "(ไม่รวมผู้เดินทางกลับด้วยเครื่องบินเช่าเหมาลำหรือผู้โดยสารเรือสำราญ)",
   "検査実施人数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "จำนวนตัวเลขของผู้เข้ารับการตรวจสอบนั้น เป็นการรายงานในเบื้องต้นเท่านั้น อาจจะมีการถูกแก้ไขด้วยข้อมูลที่ได้รับการยืนยันแล้วในภายหลัง",
   "（注）同一の対象者について複数の検体を調査する場合あり": "(หมายเหตุ) อาจมีการทดสอบมากกว่าหนึ่งตัวอย่างจากบุคคลเดียวกัน",
+  "検査実施数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "จำนวนผู้เข้ารับการตรวจที่ประกาศจะถูกรวบรวมตัวอย่างและยืนยันข้อมูลในวันถัดไป",
+  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "(หมายเหตุ) จำนวนที่เผยแพร่นี้ เป็นตัวเลขในเบื้องต้น และอาจถูกปรับแก้เป็นข้อมูลที่ได้รับการยืนยันแล้วในภายหลัง",
   "合計": "รวม",
   "{date}の全体累計": "รวมสะสมถึง %{date}",
   "{date}の合計": "รวมจนถึง %{date}",
+  "入院患者数と病床数": "จำนวนผู้ป่วยที่เข้ารับการรักษาและจำนวนเตียงรองรับผู้ป่วย",
+  "床": "เตียง",
+  "総病床数": "จำนวนเตียงรองรับผู้ป่วย",
+  "入院患者数": "จำนวนผู้ป่วยที่เข้ารับการรักษา",
+  "病床数": "เตียงรองรับผู้ป่วย",
   "最新のお知らせ": "ข่าวสารล่าสุด",
-  "都の備蓄マスク20万枚を都内全区市町村へ提供": "รัฐบาลกรุงโตเกียวมอบหน้ากากอนามัย 200,000 ชิ้นให้กับเทศบาลทุกแห่ง (ภาษาญี่ปุ่น)",
-  "都内医療機関及び保健所等へのマスクの配布について": "ประกาศของรัฐบาลกรุงโตเกียวเรื่องการแจกจ่ายหน้ากากอนามัยให้กับสถาบันทางการแพทย์และหน่วยสาธารณสุขในกรุงโตเกียว (ภาษาญี่ปุ่น)",
+  "都の備蓄マスク20万枚を都内全区市町村へ提供": "หน่วยงานราชการจังหวัดโออิตะมอบหน้ากากอนามัยให้กับเทศบาลทุกแห่ง (ภาษาญี่ปุ่น)",
+  "都内医療機関及び保健所等へのマスクの配布について": "ประกาศของหน่วยงานราชการจังหวัดโออิตะเรื่องการแจกจ่ายหน้ากากอนามัยให้กับสถาบันทางการแพทย์และหน่วยสาธารณสุขในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
   "新型コロナウイルス感染症にかかる相談窓口について": "เกี่ยวกับศูนย์ให้คำปรึกษาโควิด-19 ทางโทรศัพท์",
   "{advisory}による相談結果": "การให้คำปรึกษาโดย{advisory}",
   "新型コロナ受診相談窓口": "ศูนย์ให้คำปรึกษาโคโรนาสายพันธุ์ใหม่",
@@ -189,8 +209,7 @@
   "平日（日中）": "วันธรรมดา (กลางวัน)",
   "各保健所の電話番号は福祉保健局HPへ": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
   "平日（夜間）": "วันธรรมดา (กลางคืน)",
-  "午後5時から翌朝午前9時": "17:00 - 09:00",
-  "ひまわり": "สำหรับการสนับสนุนในภาษาอังกฤษ จีน เกาหลี สเปน และไทย กรุณาโทรเข้าศูนย์ดูแลสุขภาพโตเกียว (ฮิมาวาริ) 03-5285-8181 (09:00 - 20:00 เปิดทำการทั้งวันธรรมดา วันสุดสัปดาห์ และวันหยุดราชการ) ",
+  "午後5時から翌朝午前9時": "17:00 น. - 09:00 น.ของวันรุ่งขึ้น",
   "土日祝 終日": "เสาร์ อาทิตย์และวันหยุดนักขัตฤกษ์ (ทั้งวัน)",
   "専門的な助言が必要な場合": "หากคุณต้องการคำแนะนำจากผู้เชี่ยวชาญ",
   "入院となります": "จำเป็นต้องเข้าโรงพยาบาล",
@@ -233,13 +252,12 @@
   "かつ": "และ",
   "PCR検査": "การตรวจวินิจฉัย PCR",
   "※": "※",
-  "東京都健康安全研究センター等": "สถาบันสาธารณสุขกรุงโตเกียวหรือที่อื่น",
+  "東京都健康安全研究センター等": "สถาบันสาธารณสุขจังหวัดโออิตะหรือที่อื่น",
   "陰性": "เป็นลบ",
   "陽性": "เป็นบวก",
   "受診が必要": "ได้รับคำแนะนำให้ตรวจ",
   "新型コロナ外来（帰国者・接触者外来）": "ผู้ป่วยนอก (ผู้เดินทางกลับและผู้สัมผัสใกล้ชิด)",
   "医師による判断": "คำวินิจฉัยของแพทย์",
-  "Diagnosis by a doctor at a COVID-19 outpatient facility": "ตรวจวินิจฉัยโดยแพทย์ที่ศูนย์โควิด-19 สำหรับผู้ป่วยนอก",
   "検査の必要{ifRequired}": "คุณ{ifRequired}ต้องตรวจ",
   "あり": "จำเป็น",
   "なし": "ไม่จำเป็น",
@@ -273,8 +291,8 @@
   "都庁来庁者データに関すること": "เรื่องเกี่ยวกับข้อมูลผู้มาเยือนศาลาว่าการกรุงโตเกียว",
   "総務局": "สำนักกิจการทั่วไป",
   "感染症対策本部会議に関すること": " เรื่องเกี่ยวกับมาตรการจากสำนักงานใหญ่ควบคุมโควิด-19",
-  "都公式ホームページに関すること": "เว็บไซต์ทางการของรัฐบาลกรุงโตเกียว",
-  "都公式SNSアカウントに関すること": "บัญชีสื่อสังคมออนไลน์ของรัฐบาลกรุงโตเกียว",
+  "都公式ホームページに関すること": "เว็บไซต์ทางการของหน่วยงานราชการจังหวัดโออิตะ",
+  "都公式SNSアカウントに関すること": "บัญชีสื่อสังคมออนไลน์ของหน่วยงานราชการจังหวัดโออิตะ",
   "生活文化局": "กรมชีวิตและวัฒนธรรม",
   "中小企業支援、テレワークに関すること": "การสนับสนุนเอสเอ็มอี และการทำงานทางไกล",
   "産業労働局": "สำนักแรงงานอุตสาหกรรม",
@@ -291,19 +309,30 @@
   "都営交通に関すること": "เรื่องเกี่ยวกับระบบขนส่งในเมือง",
   "交通局": "สำนักขนส่ง",
   "（都営交通お客様センター）": "(ศูนย์บริการลูกค้าระบบขนส่งโทเอ)",
-  "検査実施人数": "จำนวนการทดสอบที่ได้ดำเนินการ",
-  "（注）医療機関が保険適用で行った検査は含まれていない": "(หมายเหตุ) ไม่รวมการทดสอบที่ครอบคลุมโดยประกันที่ทำที่สถาบันทางการแพทย์",
-  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "(หมายเหตุ) ไม่รวมผู้เดินทางกลับด้วยเครื่องบินเช่าเหมาลำหรือผู้โดยสารเรือสำราญ",
-  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "(หมายเหตุ) จำนวนที่เผยแพร่นี้ เป็นตัวเลขในเบื้องต้น และอาจถูกปรับแก้เป็นข้อมูลที่ได้รับการยืนยันแล้วในภายหลัง",
-  "2月3日～2月7日の来訪者数 (※1) の平均値 (※2) を 基準としたときの相対値": "ค่าสัมพัทธ์ซึ่งขึ้นกับค่าเฉลี่ย (*2) ของจำนวนผู้เยี่ยมเยือน (*1) จาก 3 ก.พ. ถึง 7 ก.พ.",
-  "※1) ヤフーに蓄積された位置情報データなどを元に算出した参考値": "*1 ค่าอ้างอิงโดยคำนวณจากข้อมูลที่ตั้งที่เก็บใน Yahoo",
-  "※2) 土・日・祝日を除く7:30~8:30の1週間平均値": "*2 ค่าเฉลี่ยจาก 7:30 ถึง 8:30 ระหว่างวันทำการของสัปดาห์ ซึ่งไม่รวมวันเสาร์ วันอาทิตย์ และวันหยุดราชการ",
-  "※本データは2020年3月31日までの掲載となります": "* ข้อมูลนี้จะมีจนถึง 31 มีนาคม 2563 และจะไม่มีอีกหลังจากนั้น",
-  "出典: {source}": "ที่มา: {source}",
-  "ヤフー・データソリューション": "Yahoo DATA SOLUTION",
-  "新型コロナウイルスに関する休暇や休業の取り扱い、職場のハラスメント、内定取り消しなどについての相談": "คำปรึกษาเรื่องโควิด-19 ที่เกี่ยวกับการจัดการวันหยุดและวันลา การปิดกิจการชั่วคราว การล่วงละเมิดในที่ทำงาน หรือการยื่นข้อเสนอให้ลาออก",
-  "検査実施状況": "สถานะของการทดสอบที่ได้ดำเนินการ",
-  "都内発生": "การระบาดในโตเกียว",
-  "（チャーター機・クルーズ船等）": "(เที่ยวบินเช่าเหมาลำ / เรือสำราญ)",
-  "（注）検査実施人数には、チャーター機帰国者、クルーズ船乗客等は含まれていない": "(หมายเหตุ) จำนวนคนที่ได้รับการตรวจ ไม่รวมผู้เดินทางกลับด้วยเครื่องบินเช่าเหมาลำหรือผู้โดยสารเรือสำราญ"
+  "大分県": "จังหวัดโออิตะ",
+  "大分市": "อำเภอเมืองโออิตะ",
+  "臼杵市": "เมืองอุซุกิ",
+  "別府市": "เมืองเบปปุ",
+  "竹田市": "เมืองทะเกะตะ",
+  "日田市": "เมืองฮิตะ",
+  "中津市": "เมืองนะกะทสึ",
+  "国東市": "เมืองคุนิซะกิ",
+  "津久見市": "เมืองทสึกุมิ",
+  "豊後大野市": "เมืองบุงโกะโอโนะ",
+  "宇佐市": "เมืองอุซะ",
+  "豊後高田市": "เมืองบุงโกะทะกะดะ",
+  "佐伯市": "เมืองไซกิ",
+  "由布市": "เมืองยุฟุ",
+  "杵築市": "เมืองคิทสึกิ",
+  "福岡県": "จังหวัดฟุคุโอกะ",
+  "年代別陽性患者数": "จำนวนผู้ป่วยในแต่ละช่วงอายุ",
+  "10代以下": "ต่ำกว่า 10 ปี",
+  "20代〜30代": "20 ปี 〜 30 ปี",
+  "40代〜50代": "40 ปี 〜 50 ปี",
+  "60代〜70代": "60 ปี 〜 70 ปี",
+  "70代〜80代": "70 ปี 〜 80 ปี",
+  "80代以上": "มากกว่า 80 ปี",
+  "言語選択": "เมนูเลือกภาษา",
+  "お問い合わせ": "ติดต่อเรา",
+  "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "จำนวนเตียงทั้งหมดนี้ไม่ได้หมายถึงจำนวนเตียงที่รองรับผู้ป่วยทั้งหมดที่มีอยู่ ยังมีเตียงผู้ป่วยที่ได้รับการดูแลนอกโรงพยาบาลอีกจำนวนหนึ่ง"
 }
