--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -148,6 +148,7 @@
   "累計": "累計",
   "※退院には、死亡退院を含む": "※退院には、死亡退院を含む",
   "{date} 更新": "{date} 更新",
+  "テーブルを表示": "テーブルを表示",
   "オープンデータを入手": "オープンデータを入手",
   "埋め込み用コード": "埋め込み用コード",
   "埋め込み用コードをコピーしました": "埋め込み用コードをコピーしました",
