--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -147,6 +147,7 @@
   "累計": "Total",
   "※退院には、死亡退院を含む": "* The number of discharge include discharge due to death",
   "{date} 更新": "Last update: {date}",
+  "テーブルを表示": "Show table",
   "オープンデータを入手": "Get Open Data",
   "埋め込み用コード": "Embed Code",
   "埋め込み用コードをコピーしました": "Copied the embed code",
