Dispaly "非公開" when 年代 is empty

--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -332,6 +332,7 @@
   "60代〜70代": "60 ปี 〜 70 ปี",
   "70代〜80代": "70 ปี 〜 80 ปี",
   "80代以上": "มากกว่า 80 ปี",
+  "非公開": "Undisclosed",
   "言語選択": "เมนูเลือกภาษา",
   "お問い合わせ": "ติดต่อเรา",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "จำนวนเตียงทั้งหมดนี้ไม่ได้หมายถึงจำนวนเตียงที่รองรับผู้ป่วยทั้งหมดที่มีอยู่ ยังมีเตียงผู้ป่วยที่ได้รับการดูแลนอกโรงพยาบาลอีกจำนวนหนึ่ง"
