--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -330,6 +330,7 @@
   "60代〜70代": "60s〜70s",
   "70代〜80代": "70s〜80s",
   "80代以上": "80s〜",
+  "非公開": "Undisclosed",
   "言語選択": "Select language",
   "お問い合わせ": "Contact us",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "This is not all available sickbeds. Some sickbeds are handled outside the hospital."
