--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -332,6 +332,7 @@
   "60代〜70代": "60代〜70代",
   "70代〜80代": "70代〜80代",
   "80代以上": "80代以上",
+  "非公開": "非公開",
   "言語選択": "言語選択",
   "お問い合わせ": "お問い合わせ",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "病院以外で対応する場合もあるため、これが最大許容数ではありません。"
