--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -333,7 +333,7 @@
   "70代〜80代": "70代〜80代",
   "80代以上": "80代以上",
   "非公開": "非公開",
-  "年代が公開されていない患者は人数に含まれていません。": "年代が公開されていない患者は人数に含まれていません。",
+  "年代が公開されていない患者は含まれていません。": "年代が公開されていない患者は含まれていません。",
   "言語選択": "言語選択",
   "お問い合わせ": "お問い合わせ",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "病院以外で対応する場合もあるため、これが最大許容数ではありません。"
