--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -331,7 +331,7 @@
   "70代〜80代": "70s〜80s",
   "80代以上": "80s〜",
   "非公開": "Undisclosed",
-  "年代が公開されていない患者は人数に含まれていません。": "This is not all patients. Patients that ages are undisclosed is not counted.",
+  "年代が公開されていない患者は含まれていません。": "This is not all patients. Patients that ages are undisclosed is not included.",
   "言語選択": "Select language",
   "お問い合わせ": "Contact us",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "This is not all available sickbeds. Some sickbeds are handled outside the hospital."
