--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -309,6 +309,7 @@
   "都営交通に関すること": "都営交通に関すること",
   "交通局": "交通局",
   "（都営交通お客様センター）": "（都営交通お客様センター）",
+  "居住地別陽性患者数": "居住地別陽性患者数",
   "大分県": "大分県",
   "大分市": "大分市",
   "臼杵市": "臼杵市",
@@ -325,6 +326,7 @@
   "由布市": "由布市",
   "杵築市": "杵築市",
   "福岡県": "福岡県",
+  "大阪府": "大阪府",
   "年代別陽性患者数": "年代別陽性患者数",
   "10代以下": "10代以下",
   "20代〜30代": "20代〜30代",
