--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -309,6 +309,7 @@
   "都営交通に関すること": "เรื่องเกี่ยวกับระบบขนส่งในเมือง",
   "交通局": "สำนักขนส่ง",
   "（都営交通お客様センター）": "(ศูนย์บริการลูกค้าระบบขนส่งโทเอ)",
+  "居住地別陽性患者数": "Number of patients by residence",
   "大分県": "จังหวัดโออิตะ",
   "大分市": "อำเภอเมืองโออิตะ",
   "臼杵市": "เมืองอุซุกิ",
@@ -325,6 +326,7 @@
   "由布市": "เมืองยุฟุ",
   "杵築市": "เมืองคิทสึกิ",
   "福岡県": "จังหวัดฟุคุโอกะ",
+  "大阪府": "Osaka Prefecture",
   "年代別陽性患者数": "จำนวนผู้ป่วยในแต่ละช่วงอายุ",
   "10代以下": "ต่ำกว่า 10 ปี",
   "20代〜30代": "20 ปี 〜 30 ปี",
