--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -307,6 +307,7 @@
   "都営交通に関すること": "Transportation",
   "交通局": "Bureau of Transportation",
   "（都営交通お客様センター）": "(Toei Transportation Customer Center)",
+  "居住地別陽性患者数": "Number of patients by residence",
   "大分県": "Oita Prefecture",
   "大分市": "Oita City",
   "臼杵市": "Usuki City",
@@ -323,6 +324,7 @@
   "由布市": "Yufu City",
   "杵築市": "Kitsuki City",
   "福岡県": "Fukuoka Prefecture",
+  "大阪府": "Osaka Prefecture",
   "年代別陽性患者数": "Number of patients by generation",
   "10代以下": "〜10s",
   "20代〜30代": "20s〜30s",
