--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -332,8 +332,8 @@
   "60代〜70代": "60 ปี 〜 70 ปี",
   "70代〜80代": "70 ปี 〜 80 ปี",
   "80代以上": "มากกว่า 80 ปี",
-  "非公開": "Undisclosed",
-  "年代が公開されていない患者は含まれていません。": "This is not all patients. Patients that ages are undisclosed is not included.",
+  "非公開": "ไม่เปิดเผย",
+  "年代が公開されていない患者は含まれていません。": "นี่ไม่ใช่จำนวนผู้ป่วยทั้งหมด ผู้ป่วยที่ไม่เปิดเผยอายุจะไม่ถูกนับ",
   "言語選択": "เมนูเลือกภาษา",
   "お問い合わせ": "ติดต่อเรา",
   "病院以外で対応する場合もあるため、これが最大許容数ではありません。": "จำนวนเตียงทั้งหมดนี้ไม่ได้หมายถึงจำนวนเตียงที่รองรับผู้ป่วยทั้งหมดที่มีอยู่ ยังมีเตียงผู้ป่วยที่ได้รับการดูแลนอกโรงพยาบาลอีกจำนวนหนึ่ง"
