Update Thai translation 2020-04-25

--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -37,7 +37,7 @@
   "埼玉県": "ไซตะมะ",
   "湖南省長沙市": "ฉางชา มณฑลหูหนาน",
   "湖北省武漢市": "อู่ฮั่น มณฑลหูเป่ย์",
-  "{age}代": "ช่วงอายุ {age}",
+  "{age}代": "ช่วงอายุ {age} ปี",
   "10歳未満": "ต่ำกว่า 10 ปี",
   "男性": "ชาย",
   "女性": "หญิง",
@@ -167,7 +167,7 @@
   "都民の皆様へ": "สำหรับผู้พำนักในโตเกียว (ภาษาญี่ปุ่น)",
   "県民の皆様へ": "สำหรับผู้พำนักในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
   "大分県 新型コロナウイルスに関するお知らせ": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในจังหวัดโออิตะ (ภาษาญี่ปุ่น)",
-  "大分市 新型コロナウイルスに関連する情報": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในอำเภอเมืองโออิตะ (ภาษาญี่ปุ่น)",
+  "大分市 新型コロナウイルスに関連する情報": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในเมืองโออิตะ (ภาษาญี่ปุ่น)",
   "大分合同新聞": "สำนักข่าว Godo โออิตะ",
   "NHK NEWS 大分": "NHK NEWS โออิตะ",
   "全国の最新感染動向": "ความเคลื่อนไหวล่าสุดของสถานการณ์โควิด-19 ในประเทศญี่ปุ่น",
@@ -310,9 +310,9 @@
   "都営交通に関すること": "เรื่องเกี่ยวกับระบบขนส่งในเมือง",
   "交通局": "สำนักขนส่ง",
   "（都営交通お客様センター）": "(ศูนย์บริการลูกค้าระบบขนส่งโทเอ)",
-  "居住地別陽性患者数": "Number of patients by residence",
+  "居住地別陽性患者数": "จำนวนผู้ป่วยต่อจำนวนผู้อยู่อาศัย",
   "大分県": "จังหวัดโออิตะ",
-  "大分市": "อำเภอเมืองโออิตะ",
+  "大分市": "เมืองโออิตะ",
   "臼杵市": "เมืองอุซุกิ",
   "別府市": "เมืองเบปปุ",
   "竹田市": "เมืองทะเกะตะ",
@@ -327,7 +327,7 @@
   "由布市": "เมืองยุฟุ",
   "杵築市": "เมืองคิทสึกิ",
   "福岡県": "จังหวัดฟุคุโอกะ",
-  "大阪府": "Osaka Prefecture",
+  "大阪府": "จังหวัดโอซะกะ",
   "年代別陽性患者数": "จำนวนผู้ป่วยในแต่ละช่วงอายุ",
   "10代以下": "ต่ำกว่า 10 ปี",
   "20代〜30代": "20 ปี 〜 30 ปี",
