--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -148,7 +148,7 @@
   "累計": "รวม",
   "※退院には、死亡退院を含む": "※ จำนวนออกจากโรงพยาบาล รวมการออกเนื่องจากเสียชีวิต",
   "{date} 更新": "ปรับปรุงล่าสุด: {date}",
-  "テーブルを表示": "Show table",
+  "テーブルを表示": "แสดงตาราง",
   "オープンデータを入手": "ดูข้อมูลเปิด",
   "埋め込み用コード": "รหัสสำหรับฝังหน้าเว็บ",
   "埋め込み用コードをコピーしました": "คัดลอกรหัสสำหรับฝังหน้าเว็บแล้ว",
