--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -327,12 +327,16 @@
   "福岡県": "Fukuoka Prefecture",
   "大阪府": "Osaka Prefecture",
   "年代別陽性患者数": "Number of patients by generation",
-  "10代以下": "〜10s",
-  "20代〜30代": "20s〜30s",
-  "40代〜50代": "40s〜50s",
-  "60代〜70代": "60s〜70s",
-  "70代〜80代": "70s〜80s",
-  "80代以上": "80s〜",
+  "10代未満": "under 10s",
+  "10代": "10s",
+  "20代": "20s",
+  "30代": "30s",
+  "40代": "40s",
+  "50代": "50s",
+  "60代": "60s",
+  "70代": "70s",
+  "80代": "80s",
+  "90代以上": "over 90s",
   "非公開": "Undisclosed",
   "年代が公開されていない患者は含まれていません。": "This is not all patients. Patients that ages are undisclosed is not included.",
   "言語選択": "Select language",
