--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -329,12 +329,16 @@
   "福岡県": "福岡県",
   "大阪府": "大阪府",
   "年代別陽性患者数": "年代別陽性患者数",
-  "10代以下": "10代以下",
-  "20代〜30代": "20代〜30代",
-  "40代〜50代": "40代〜50代",
-  "60代〜70代": "60代〜70代",
-  "70代〜80代": "70代〜80代",
-  "80代以上": "80代以上",
+  "10代未満": "10代未満",
+  "10代": "10代",
+  "20代": "20代",
+  "30代": "30代",
+  "40代": "40代",
+  "50代": "50代",
+  "60代": "60代",
+  "70代": "70代",
+  "80代": "80代",
+  "90代以上": "90代以上",
   "非公開": "非公開",
   "年代が公開されていない患者は含まれていません。": "年代が公開されていない患者は含まれていません。",
   "言語選択": "言語選択",
