--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -329,12 +329,16 @@
   "福岡県": "จังหวัดฟุคุโอกะ",
   "大阪府": "จังหวัดโอซะกะ",
   "年代別陽性患者数": "จำนวนผู้ป่วยในแต่ละช่วงอายุ",
-  "10代以下": "ต่ำกว่า 10 ปี",
-  "20代〜30代": "20 ปี 〜 30 ปี",
-  "40代〜50代": "40 ปี 〜 50 ปี",
-  "60代〜70代": "60 ปี 〜 70 ปี",
-  "70代〜80代": "70 ปี 〜 80 ปี",
-  "80代以上": "มากกว่า 80 ปี",
+  "10代未満": "ต่ำกว่า 10 ปี",
+  "10代": "10ป ี",
+  "20代": "20 ปี",
+  "30代": "30 ปี",
+  "40代": "40 ปี",
+  "50代": "50 ปี",
+  "60代": "60 ปี",
+  "70代": "70 ปี",
+  "80代": "80 ปี",
+  "90代以上": "มากกว่า 90 ปี",
   "非公開": "ไม่เปิดเผย",
   "年代が公開されていない患者は含まれていません。": "นี่ไม่ใช่จำนวนผู้ป่วยทั้งหมด ผู้ป่วยที่ไม่เปิดเผยอายุจะไม่ถูกนับ",
   "言語選択": "เมนูเลือกภาษา",
