--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -327,12 +327,16 @@
   "福岡県": "Prefektur Fukuoka",
   "大阪府": "Prefektur Osaka",
   "年代別陽性患者数": "Jumlah pasien menurut golongan umur",
-  "10代以下": "〜10s",
-  "20代〜30代": "20s〜30s",
-  "40代〜50代": "40s〜50s",
-  "60代〜70代": "60s〜70s",
-  "70代〜80代": "70s〜80s",
-  "80代以上": "80s〜",
+  "10代未満": "dibawah 10s",
+  "10代": "10s",
+  "20代": "20s",
+  "30代": "30s",
+  "40代": "40s",
+  "50代": "50s",
+  "60代": "60s",
+  "70代": "70s",
+  "80代": "80s",
+  "90代以上": "lebih 90s",
   "非公開": "Dirahasiakan",
   "年代が公開されていない患者は含まれていません。": "Belum termasuk semua pasien. Pasien yang usianya dirahasiakan tidak dimasukkan dalam perhitungan.",
   "言語選択": "Pilih Bahasa",
