--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -2,6 +2,7 @@
   "新型コロナウイルス感染症が心配なときに": "Jika anda peduli tentang COVID-19",
   "詳細を見る（東京都福祉保健局）": "Untuk informasil lebih lanjut: situs Biro Kesejahteraan Sosial dan Kesehatan Publik",
   "県内の最新感染動向": "Pembaharuan tentang COVID-19 di Oita",
+  "県内の最新支援状況": "Latest updates on Support in Oita",
   "感染が疑われるときは": "Jika anda merasa terinfeksi",
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Jika anda merasa mempunyai masalah, konsultasi melalui telepon",
   "相談の手順を見る": "Alur Konsultasi",
@@ -11,6 +12,23 @@
   "検査実施数": "Jumlah tes yang telah dilakukan",
   "新型コロナコールセンター相談件数": "Jumlah panggilan telepon ke Pusat Layanan Coronavirus Oita",
   "相談窓口相談件数": "Jumlah penanya ke bagian konsultasi COVID-19",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "Usage Stats of Loan (Number of Loan by Industry)",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "Usage Stats of Loan (Amount of Money)",
+  "飲食業": "Restaurant",
+  "サービス業 (宿泊除く)": "Hospitality",
+  "宿泊業": "Lodging",
+  "小売業": "Retail",
+  "卸売業": "Wholesale",
+  "建設業": "Building",
+  "製造業": "Manufacturing",
+  "がんばろう！おおいた資金繰り応援資金": "Supprt fund",
+  "新型コロナウイルス感染症緊急対策特別資金": "Countermeasure fund",
+  "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
+  "雇用調整助成金 (申請書提出件数、支給決定件数)": "Number of application subsidy (applications, paid)",
+  "申請書提出件数": "applications",
+  "支給決定件数": "paid",
+  "労働局 (097-535-2100) への相談件数": "To labar bereau",
+  "大分県 (0120-575-626) への相談件数": "To Oita pref.",
   "都営地下鉄の利用者数の推移": "Estimasi jumlah penumpang subway Toei",
   "都庁来庁者数の推移": "Jumalh pengunjung ke gedung pemerintahan Prefektur Oita",
   "都内発生（疑い例・接触者調査）": "Wabah di Oita (terkonfirmasi melalui tes terhadap tersangka pengidap atau pernah terpapar dengan pengidap)",
@@ -27,6 +45,8 @@
     "teruji": "kasus",
     "laporan": "pertanyaan"
   },
+  "億円": "(100M yen)",
+  "うち": "among",
   "日付": "tanggal",
   "公表日": "Tanggal Publikasi",
   "居住地": "Tempat tinggal",
