Remove notation to indicate unofficial
https://covid19-oita.slack.com/archives/C010LTDHW20/p1591777904007500

--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -175,7 +175,7 @@
   "都営地下鉄4路線の自動改札出場数": "Jumlah total penumpang yang melalui gerbang tiket 4 jalur subway Toei",
   "東京都": "Pemerintahan Prefektur Oita",
   "新型コロナウイルス感染症": "COVID-19",
-  "対策サイト": "Situs Gugus Tugas (tidak resmi)",
+  "対策サイト": "Situs Gugus Tugas",
   "最終更新": "Pembaruan terkini",
   "注釈": "Ini adalah terjemahan darurat. Mohon pengertiannya bahwa ada kemungkinan penerjemahan yang tidak akurat.",
   "print": "Cetak",
