--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -175,7 +175,7 @@
   "都営地下鉄4路線の自動改札出場数": "Total number of passengers passing through the ticket gates of the four Toei subway lines",
   "東京都": "Oita Prefecture Government",
   "新型コロナウイルス感染症": "COVID-19",
-  "対策サイト": "Task Force website (unofficial)",
+  "対策サイト": "Task Force website",
   "最終更新": "Last update",
   "注釈": "This is a provisional translation. Please be aware that there may be mistranslations.",
   "print": "Print",
