--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -176,7 +176,7 @@
   "都営地下鉄4路線の自動改札出場数": "จำนวนรวมผู้โดยสารรถไฟใต้ดินโทเอ 4 สาย",
   "東京都": "โตเกียว",
   "新型コロナウイルス感染症": "การติดเชื้อไวรัสโคโรนาสายพันธุ์ใหม่",
-  "対策サイト": "เว็บไซต์เฉพาะกิจ (ไม่เป็นทางการ)",
+  "対策サイト": "เว็บไซต์เฉพาะกิจ",
   "最終更新": "ปรับปรุงล่าสุด",
   "注釈": "นี่เป็นการแปลเพื่อใช้ชั่วคราว โปรดระวังว่าอาจมีการแปลที่ผิดพลาด",
   "print": "พิมพ์หน้านี้",
