Add "TEL" before phone number

--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -28,8 +28,8 @@
   "雇用調整助成金 (申請書提出件数、支給決定件数)": "Number of application subsidy (applications, paid)",
   "申請書提出件数": "applications",
   "支給決定件数": "paid",
-  "労働局 (097-535-2100) への相談件数": "To labar bureau",
-  "大分県 (0120-575-626) への相談件数": "To Oita pref.",
+  "労働局 (TEL 097-535-2100) への相談件数": "To labar bureau",
+  "大分県 (TEL 0120-575-626) への相談件数": "To Oita pref.",
   "都営地下鉄の利用者数の推移": "คาดการณ์จำนวนผู้โดยสารรถไฟใต้ดินโทเอ",
   "都庁来庁者数の推移": "แนวโน้มจำนวนผู้มาเยือนศาลาว่าการกรุงโตเกียว",
   "都内発生（疑い例・接触者調査）": "การระบาดในโตเกียว (กรณีที่สงสัย / อยู่ใกล้ชิด)",
