--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -26,8 +26,8 @@
   "雇用調整助成金 (申請書提出件数、支給決定件数)": "Number of application subsidy (applications, paid)",
   "申請書提出件数": "applications",
   "支給決定件数": "paid",
-  "労働局 (097-535-2100) への相談件数": "To labar bureau",
-  "大分県 (0120-575-626) への相談件数": "To Oita pref.",
+  "労働局 (TEL 097-535-2100) への相談件数": "To labar bureau",
+  "大分県 (TEL 0120-575-626) への相談件数": "To Oita pref.",
   "相談窓口相談件数": "Number of querents to consultation desk for COVID-19",
   "都営地下鉄の利用者数の推移": "Estimated number of Toei subway passengers",
   "都庁来庁者数の推移": "Number of visitors to the Oita Prefecture Government buildings",
