--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -27,8 +27,8 @@
   "雇用調整助成金 (申請書提出件数、支給決定件数)": "Number of application subsidy (applications, paid)",
   "申請書提出件数": "applications",
   "支給決定件数": "paid",
-  "労働局 (097-535-2100) への相談件数": "To labar bureau",
-  "大分県 (0120-575-626) への相談件数": "To Oita pref.",
+  "労働局 (TEL 097-535-2100) への相談件数": "To labar bureau",
+  "大分県 (TEL 0120-575-626) への相談件数": "To Oita pref.",
   "都営地下鉄の利用者数の推移": "Estimasi jumlah penumpang subway Toei",
   "都庁来庁者数の推移": "Jumalh pengunjung ke gedung pemerintahan Prefektur Oita",
   "都内発生（疑い例・接触者調査）": "Wabah di Oita (terkonfirmasi melalui tes terhadap tersangka pengidap atau pernah terpapar dengan pengidap)",
