Fix notation fo legends

--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -21,14 +21,14 @@
   "卸売業": "Wholesale",
   "建設業": "Building",
   "製造業": "Manufacturing",
-  "がんばろう！おおいた資金繰り応援資金": "Supprt fund",
-  "新型コロナウイルス感染症緊急対策特別資金": "Countermeasure fund",
+  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Supprt fund",
+  "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Countermeasure fund",
   "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
-  "雇用調整助成金 (申請書提出件数、支給決定件数)": "Number of application subsidy (applications, paid)",
-  "申請書提出件数": "applications",
-  "支給決定件数": "paid",
-  "労働局 (TEL 097-535-2100) への相談件数": "To labar bureau",
-  "大分県 (TEL 0120-575-626) への相談件数": "To Oita pref.",
+  "雇用調整助成金 (申請書受付件数 (累計値)、支給決定件数 (累計値))": "Number of application subsidy (applications, paid)",
+  "申請書受付件数 (累計値)": "applications",
+  "支給決定件数 (累計値)": "paid",
+  "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "To labar bureau",
+  "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "To Oita pref.",
   "都営地下鉄の利用者数の推移": "Estimasi jumlah penumpang subway Toei",
   "都庁来庁者数の推移": "Jumalh pengunjung ke gedung pemerintahan Prefektur Oita",
   "都内発生（疑い例・接触者調査）": "Wabah di Oita (terkonfirmasi melalui tes terhadap tersangka pengidap atau pernah terpapar dengan pengidap)",
