--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -24,7 +24,7 @@
   "がんばろう！おおいた資金繰り応援資金 (累計値)": "Supprt fund",
   "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Countermeasure fund",
   "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
-  "雇用調整助成金 (申請書受付件数 (累計値)、支給決定件数 (累計値))": "Number of application subsidy (applications, paid)",
+  "雇用調整助成金の支給決定件数": "Number of application subsidy (applications, paid)",
   "申請書受付件数 (累計値)": "applications",
   "支給決定件数 (累計値)": "paid",
   "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "To labar bureau",
