--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -14,7 +14,7 @@
   "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "Usage Stats of Loan (Number of Loan by Industry)",
   "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "Usage Stats of Loan (Amount of Money)",
   "飲食業": "Restaurant",
-  "サービス業 (宿泊除く)": "Hospitality",
+  "サービス業（宿泊除く）": "Hospitality",
   "宿泊業": "Lodging",
   "小売業": "Retail",
   "卸売業": "Wholesale",
@@ -25,6 +25,7 @@
   "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
   "雇用調整助成金の支給決定件数": "Number of application subsidy (applications, paid)",
   "申請書受付件数 (累計値)": "applications",
+  "支給決定件数": "number of paid cases",
   "支給決定件数 (累計値)": "paid",
   "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "To labar bureau",
   "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "To Oita pref.",
