Update Thai translation fix some English wrong typo

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -20,7 +20,7 @@
   "卸売業": "Wholesale",
   "建設業": "Building",
   "製造業": "Manufacturing",
-  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Supprt fund",
+  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Support fund",
   "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Countermeasure fund",
   "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
   "雇用調整助成金の支給決定件数": "Number of application subsidy (applications, paid)",
