--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -3,7 +3,7 @@
   "詳細を見る（東京都福祉保健局）": "ดูรายละเอียด (สำนักอนามัยและสวัสดิการแห่งกรุงโตเกียว)",
   "都内の最新感染動向": "ข่าวสารการติดเชื้อล่าสุดในโตเกียว",
   "県内の最新感染動向": "ข่าวสารการติดเชื้อล่าสุดในจังหวัดโออิตะ",
-  "県内の最新支援状況": "Latest updates on Support in Oita",
+  "県内の最新支援状況": "ข่าวสารการสนับสนุนล่าสุดในจังหวัดโออิตะ",
   "感染が疑われるときは": "หากคุณสงสัยว่าจะติดเชื้อ (ภาษาญี่ปุ่น)",
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "หากคุณกังวลเกี่ยวกับอาการของคุณหรือครอบครัวของคุณโปรดโทรหาเราก่อน",
   "相談の手順を見る": "ขั้นตอนเพื่อรับการช่วยเหลือ",
@@ -13,24 +13,24 @@
   "検査実施数": "จำนวนที่ได้ดำเนินการตรวจ",
   "新型コロナコールセンター相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาโควิด-19",
   "相談窓口相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาทางโทรศัพท์ (ทุกประเภท)",
-  "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "Usage Stats of Loan (Number of Loan by Industry)",
-  "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "Usage Stats of Loan (Amount of Money)",
-  "飲食業": "Restaurant",
-  "サービス業（宿泊除く）": "Hospitality",
-  "宿泊業": "Lodging",
-  "小売業": "Retail",
-  "卸売業": "Wholesale",
-  "建設業": "Building",
-  "製造業": "Manufacturing",
-  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Supprt fund",
-  "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Countermeasure fund",
-  "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
-  "雇用調整助成金の支給決定件数": "Number of application subsidy (applications, paid)",
-  "申請書受付件数 (累計値)": "applications",
-  "支給決定件数": "number of paid cases",
-  "支給決定件数 (累計値)": "paid",
-  "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "To labar bureau",
-  "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "To Oita pref.",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "สถิติการกู้เงินในจังหวัดโออิตะ (จำนวนการกู้เงินในแต่ละอุตสาหกรรม)",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "สถิติการกู้เงินในจังหวัดโออิตะ (จำนวนเงิน)",
+  "飲食業": "ร้านอาหาร",
+  "サービス業（宿泊除く）": "การรักษาพยาบาล",
+  "宿泊業": "โรงแรม",
+  "小売業": "ค้าปลีก",
+  "卸売業": "ค้าส่ง",
+  "建設業": "ก่อสร้าง",
+  "製造業": "โรงงานอุตสาหกรรม",
+  "がんばろう！おおいた資金繰り応援資金 (累計値)": "กองทุนสนับสนุน สู้ไปด้วยกันโออิตะ! (สะสม)",
+  "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "กองทุนพิเศษโควิด-19 (สะสม)",
+  "雇用調整助成金の申請に関する相談件数": "จำนวนคำปรึกษาขอความช่วยเหลือด้านการจัดหางาน",
+  "雇用調整助成金の支給決定件数": "จำนวนการอนุมัติงบประมาณด้านการจัดหางาน",
+  "申請書受付件数 (累計値)": "จำนวนผู้สมัคร(สะสม)",
+  "支給決定件数": "จำนวนกรณีที่จ่าย",
+  "支給決定件数 (累計値)": "จำนวนกรณีที่จ่าย(สะสม)",
+  "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "กระทรวงแรงงาน (โทร +81 097-535-2100)",
+  "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "จังหวัดโออิตะ (โทร +81 0120-575-626)",
   "都営地下鉄の利用者数の推移": "คาดการณ์จำนวนผู้โดยสารรถไฟใต้ดินโทเอ",
   "都庁来庁者数の推移": "แนวโน้มจำนวนผู้มาเยือนศาลาว่าการกรุงโตเกียว",
   "都内発生（疑い例・接触者調査）": "การระบาดในโตเกียว (กรณีที่สงสัย / อยู่ใกล้ชิด)",
@@ -47,8 +47,8 @@
     "tested": "กรณี",
     "reports": "สาย"
   },
-  "億円": "(100M yen)",
-  "うち": "among",
+  "億円": "(ร้อยล้านเยน)",
+  "うち": "คำอธิบายภาพ",
   "日付": "วันที่",
   "公表日": "วันที่รายงาน",
   "居住地": "ที่อยู่อาศัย",
@@ -351,7 +351,7 @@
   "大阪府": "จังหวัดโอซะกะ",
   "年代別陽性患者数": "จำนวนผู้ป่วยในแต่ละช่วงอายุ",
   "10代未満": "ต่ำกว่า 10 ปี",
-  "10代": "10ป ี",
+  "10代": "10 ปี",
   "20代": "20 ปี",
   "30代": "30 ปี",
   "40代": "40 ปี",
